# axiom-explorer

./: .gitignore  .gitlab-ci.yml  .mailmap  .zenodo.json  CITATION.cff  HANDOFF.md  LICENSE  README.md  pyproject.toml
data/phase0/: queries.jsonl
data/phase0/raw/: A1xA2__q1__homotopy-type-theory__condensed-mathematics.json  A1xA2__q1__univalence__condensed-sets.json  (+130 more)
docs/: 00-hypothesis.md  01-methodology.md  preprint_checklist.md
docs/adr/: 0001-workspace-scaffolding.md  0002-bibliometric-noise-mitigation.md
docs/seeds/: A1-univalence.md  A2-condensed.md  A3-perfectoid.md  A4-synthetic-ricci.md
docs/synthesis/: CONJECTURE.md
lean/: AxiomExplorer.lean  lake-manifest.json  lakefile.toml
lean/AxiomExplorer/: SyntheticStoneDuality.lean
paper/: preprint.tex  references.bib
paper/conjecture/: .zenodo.json  CITATION.cff  preprint.tex  references.bib
paper/methodology/: .zenodo.json  CITATION.cff  preprint.tex  references.bib
research/phase0-bibliometric/: REPORT.md
research/phase1-formal-state/: REPORT.md
research/phase4-final-report/: REPORT.md
research/phase5-pi-n-cond/: REPORT.md
scripts/: build_publication_bundle.py  load_tokens.sh
src/axiom_explorer/: __init__.py  arxiv_search.py  cli.py  run_phase.py  seeds.py
tests/: test_arxiv_query_build.py  test_cardinality_unification.py  test_condensed_pi1_cardinality.py  test_derived_limits_finite.py  test_lascar_cardinality.py  test_phase0_helpers.py  test_phase1_helpers.py  test_pi_n_cond.py  test_quotient_cardinality.py  test_seeds.py  test_stone_duality_finite_model.py  test_warn_anomaly_toy.py
(+20 files in other folders)
